# starcdn

./: .dockerignore  .env.example  .gitignore  404.html  Cargo.toml  Dockerfile  README.md  astro.config.mjs  docker-compose.yml  eslint.config.mjs  go.mod  go.sum  index.html  next.config.test.mjs  next.config.ts  nginx.conf  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci-cd.yml  deploy-page.yml
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  site-chrome.tsx  sitemap.ts
app/about/: AboutContent.tsx  about.css  page.tsx
app/admin/: admin.css
app/components/: ServiceStatus.tsx
app/data/: faq.json  partners.json  team.json
app/docs/: docs.css  page.tsx
app/notices/: page.tsx
app/privacy/: page.tsx
app/sponsor/: page.tsx
app/styles/: admin.css  home.css  not-found.css  waf.css
app/terms/: page.tsx
app/top/: page.tsx
app/version/: page.tsx
app/waf/: page.tsx
cmd/starcdn/: main.go
components/: AnimatedCounter.tsx  BackToTop.tsx  ClientComponents.tsx  CopyCodeBlock.tsx  FaqAccordion.tsx  Footer.tsx  LanguageSwitcher.tsx  Navbar.tsx  SponsorLogo.tsx  TabPage.tsx  TitleManager.tsx  TopBanner.tsx  Typewriter.tsx
i18n/: en.ts  index.tsx  zh.ts
img/: qxzhan.avif
internal/admin/: handler.go
internal/auth/: auth.go
internal/db/: db.go
internal/server/: server.go  server_test.go
public/scripts/: not-found.js  waf.js
scripts/: cargo.js
src/: admin.rs  app.rs  auth.rs  cache.rs  config.rs  db.rs  lib.rs  main.rs  proxy.rs  waf.rs
src/components/: SiteFooter.astro  (+1 more)
tests/: core.rs
(+22 files in other folders)
