[package]
name = "starcdn"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
globset = "0.4"
hex = "0.4"
jsonwebtoken = "9"
md5 = "0.7"
mime_guess = "2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset", "gzip", "brotli", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "set-header", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
